--- a/ConnectionPool/WebContent/WEB-INF/web.xml
+++ b/ConnectionPool/WebContent/WEB-INF/web.xml
@@ -9,4 +9,8 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <listener>
+    <listener-class>com.congpc.servlet.AppContextListener</listener-class>
+  </listener>
 </web-app>
